# indl

./: 404.html  index.html  mkdocs.yml  mkdocs_preamble.py  objects.inv  settings.ini  setup.cfg  setup.py
API/data/: index.html
API/dists/: index.html
API/fileio/: index.html
API/layers/: index.html
API/lfads/: index.html
API/metrics/: index.html
API/misc/: index.html
API/regularizers/: index.html
API/rnn/: index.html
API/utils/: index.html
DSAE/dsae/: index.html
DSAE/recurrent_layers/: index.html
DSAE/tfp_notes/: index.html
DSAE/tfp_utils/: index.html
Miscellaneous/junk_model_inspect/: index.html
Miscellaneous/kernels/: index.html
Miscellaneous/metrics/: index.html
Miscellaneous/sigfuncs/: index.html
bVAE/LFADS_Complex_Cell/: index.html
bVAE/LFADS_utils/: index.html
bVAE/beta_vae/: index.html
bVAE/recurrent_layers/: index.html
bVAE/tfp_utils/: index.html
docs/: README.md
docs/API/: data.md  dists.md  fileio.md  layers.md  lfads.md  metrics.md  misc.md  regularizers.md  rnn.md  utils.md
docs/DSAE/: dsae.ipynb  recurrent_layers.ipynb  tfp_notes.ipynb  tfp_utils.ipynb
docs/Miscellaneous/: junk_model_inspect.ipynb  kernels.ipynb  metrics.ipynb  sigfuncs.ipynb
docs/bVAE/: LFADS_Complex_Cell.ipynb  LFADS_utils.ipynb  beta_vae.ipynb  tfp_utils.ipynb
indl/: fileio.py  metrics.py  regularizers.py
indl/data/: augmentations.py  helper.py
indl/dists/: __init__.py  sequential.py
indl/layers/: __init__.py
indl/misc/: kernels.py  sigfuncs.py
indl/model/: autoshape_mixin.py  beta_vae.py  tfp.py  (+5 more)
search/: search_index.json
(+40 files in other folders)
