[metadata]
name = indl
version = attr: indl.__version__
author = Chadwick Boulay
author_email = chadwick.boulay@gmail.com
description = Utilities for intracranial neurophysiology and deep learning, especially autoencoders
long_description = file: docs/README.md
long_description_content_type = text/markdown
url = https://github.com/SachsLab/indl
project_urls =
    Bug Tracker = https://github.com/SachsLab/indl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    tensorflow
    tensorflow-probability ==0.12.2
    scipy
    numpy

[options.packages.find]
exclude=tests
